tests/snapshots/basic__justify_content_flexstart_multiple_items_column.snap
---
source: tests/basic.rs
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789x
0Ape                 |
1Bat                 |
2Cat                 |
3                    |
4                    |
x--------------------x

