tests/snapshots/basic__justify_content_flexstart_single_item_column.snap
---
source: tests/basic.rs
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789x
0Hello world!        |
1                    |
2                    |
x--------------------x

