tests/snapshots/basic__justify_content_space_around_single_item_column.snap
---
source: tests/basic.rs
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789x
0                    |
1                    |
2Hello world!        |
3                    |
4                    |
x--------------------x

